:lipstick: fix chatbot icon on mobile

--- a/assets/styles/pages/home.scss
+++ b/assets/styles/pages/home.scss
@@ -755,7 +755,11 @@
     margin: 0;
 }
 
-.desktop-closed-message-avatar {
+.desktop-closed-message-avatar, .mobile-closed-message-avatar {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+
     img {
         width: 50% !important;
     }
